crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/badShaderParent.usda
version https://git-lfs.github.com/spec/v1
oid sha256:eb6bbe602f909e824fb1d293fa99d1399755d6c3f91466fd372a69ec26d4d1c6
size 447
